--- a/webapprt/webapprt/overrides/appstrings.properties
+++ b/webapprt/webapprt/overrides/appstrings.properties
@@ -33,3 +33,4 @@ phishingBlocked=Lo site Web sus %S es estat senhalat coma una contrafaiçon conc
 cspBlocked=Aquesta aplicacion a ensajat d'accedir a una ressorsa que possedís una estrategia de seguretat de contengut que l'empacha d'èsser integrada d'aqueste biais.
 corruptedContentError=L'aplicacion s'es arrestada perque una error dins la transmission de donadas es estada detectada.
 remoteXUL=Aquesta aplicacion utiliza una anciana tecnologia qu'es pas mai disponibla.
+sslv3Used=Aquesta aplicacion pòt pas garantir la seguretat de vòstras donadas sus %S perque utiliza SSLv3, un protocòl de seguretat pas segur.
