[oc] update from Pootle (firefox)

--- a/toolkit/chrome/global/aboutTelemetry.properties
+++ b/toolkit/chrome/global/aboutTelemetry.properties
@@ -13,7 +13,9 @@ generalDataHeadingName = Nom
 generalDataHeadingValue = Valor
 
 
+telemetryLogHeadingId = Id
 
+telemetryLogHeadingTimestamp = Orodatatge
 
 telemetryLogHeadingData = Donadas
 
